{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 137,
  "lineage": "f13252ad-8aeb-b480-2197-92d16ea7a72c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_NAT_Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c4494bb91faf03d",
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:elastic-ip/eipalloc-04c4494bb91faf03d",
            "domain": "vpc",
            "id": "eipalloc-04c4494bb91faf03d",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-52-220-78-181.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.78.181",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "EIP for NAT Gateway"
            },
            "tags_all": {
              "Name": "EIP for NAT Gateway"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Counting_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:instance/i-0b567c28862998807",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b567c28862998807",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dashboard_counting_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05108f96e3ec61c63"
              }
            ],
            "primary_network_interface_id": "eni-05108f96e3ec61c63",
            "private_dns": "ip-172-16-2-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.10",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00800819884c7d1ad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd1d2e750dd79d45",
            "tags": {
              "Name": "Counting Service"
            },
            "tags_all": {
              "Name": "Counting Service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-057856fbf32c9cf81"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "i-0b567c28862998807",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.dashboard_counting_key_pair",
            "aws_security_group.Security_Group_for_Counting",
            "aws_security_group.Security_Group_for_Dashboard",
            "aws_subnet.Private_Subnet_for_Counting",
            "aws_vpc.Dashboard_Counting_App_VPC",
            "data.http.my_ip",
            "tls_private_key.dashboard_counting_key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Dashboard_Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e7ff22101b84bcff",
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:instance/i-0f0d43d17044db65f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f0d43d17044db65f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dashboard_counting_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-003809e5abcc17af9"
              }
            ],
            "primary_network_interface_id": "eni-003809e5abcc17af9",
            "private_dns": "ip-172-16-1-10.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.10",
            "public_dns": "ec2-54-255-203-180.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.255.203.180",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-038e2b2e2cf113c3a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de5648818b4fe2a5",
            "tags": {
              "Name": "Dashboard Service"
            },
            "tags_all": {
              "Name": "Dashboard Service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-026552c82830cae51"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "i-0f0d43d17044db65f",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_instance.Counting_Instance",
            "aws_key_pair.dashboard_counting_key_pair",
            "aws_security_group.Security_Group_for_Counting",
            "aws_security_group.Security_Group_for_Dashboard",
            "aws_subnet.Private_Subnet_for_Counting",
            "aws_subnet.Public_Subnet_for_Dashboard",
            "aws_vpc.Dashboard_Counting_App_VPC",
            "data.http.my_ip",
            "tls_private_key.dashboard_counting_key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:internet-gateway/igw-05ac16428de9264fc",
            "id": "igw-05ac16428de9264fc",
            "owner_id": "290094381384",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Dashboard Counting App Internet Gateway"
            },
            "tags_all": {
              "Name": "Dashboard Counting App Internet Gateway"
            },
            "vpc_id": "vpc-02a807e6509170e64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c4494bb91faf03d",
            "association_id": "eipassoc-098e030cec3ad0ffc",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-05c5ee9e3424159bc",
            "network_interface_id": "eni-030a96fcac9df02f4",
            "private_ip": "172.16.1.145",
            "public_ip": "52.220.78.181",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de5648818b4fe2a5",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            },
            "vpc_id": "vpc-02a807e6509170e64"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip_for_NAT_Gateway",
            "aws_internet_gateway.igw",
            "aws_subnet.Public_Subnet_for_Dashboard",
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw_route_for_Public_Route_Table_for_Dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ac16428de9264fc",
            "id": "r-rtb-002a24553d9c31a051080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-002a24553d9c31a05",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-002a24553d9c31a05"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public_Route_Table_for_Dashboard",
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ngw_route_for_Private_Route_Table_for_Counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ddcf9c4d35507b961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05c5ee9e3424159bc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0ddcf9c4d35507b96",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0ddcf9c4d35507b96"
          },
          "dependencies": [
            "aws_eip.eip_for_NAT_Gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.Private_Route_Table_for_Counting",
            "aws_subnet.Public_Subnet_for_Dashboard",
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table_for_Counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:route-table/rtb-0ddcf9c4d35507b96",
            "id": "rtb-0ddcf9c4d35507b96",
            "owner_id": "290094381384",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "Private Route Table for Counting"
            },
            "tags_all": {
              "Name": "Private Route Table for Counting"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a807e6509170e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "rtb-0ddcf9c4d35507b96",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table_for_Dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:route-table/rtb-002a24553d9c31a05",
            "id": "rtb-002a24553d9c31a05",
            "owner_id": "290094381384",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "Public Route Table for Dashboard"
            },
            "tags_all": {
              "Name": "Public Route Table for Dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a807e6509170e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "rtb-002a24553d9c31a05",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private_Subnet_Association_with_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e579a47320995cbb",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0ddcf9c4d35507b96",
            "subnet_id": "subnet-0cd1d2e750dd79d45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Private_Route_Table_for_Counting",
            "aws_subnet.Private_Subnet_for_Counting",
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Public_Subnet_Association_with_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc790d058cdb4de7",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-002a24553d9c31a05",
            "subnet_id": "subnet-0de5648818b4fe2a5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.Public_Route_Table_for_Dashboard",
            "aws_subnet.Public_Subnet_for_Dashboard",
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_for_Counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:security-group/sg-057856fbf32c9cf81",
            "description": "Security group for the counting service allowing inbound traffic from the dashboard and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-057856fbf32c9cf81",
            "ingress": [
              {
                "cidr_blocks": [
                  "116.89.17.84/32"
                ],
                "description": "SSH from local network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow ssh from dashboard instance",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026552c82830cae51"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Counting service HTTP from dashboard instance",
                "from_port": 9003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026552c82830cae51"
                ],
                "self": false,
                "to_port": 9003
              }
            ],
            "name": "Security_Group_for_Counting",
            "name_prefix": "",
            "owner_id": "290094381384",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_for_Counting"
            },
            "tags_all": {
              "Name": "Security_Group_for_Counting"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a807e6509170e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "sg-057856fbf32c9cf81",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_security_group.Security_Group_for_Dashboard",
            "aws_vpc.Dashboard_Counting_App_VPC",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Security_Group_for_Dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:security-group/sg-026552c82830cae51",
            "description": "Security group for the dashboard allowing inbound traffic on port 22,80,443 and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026552c82830cae51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Dashboard HTTP from anywhere",
                "from_port": 9002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9002
              },
              {
                "cidr_blocks": [
                  "116.89.17.84/32"
                ],
                "description": "SSH from local network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security_Group_for_Dashboard",
            "name_prefix": "",
            "owner_id": "290094381384",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Security_Group_for_Dashboard"
            },
            "tags_all": {
              "Name": "Security_Group_for_Dashboard"
            },
            "timeouts": null,
            "vpc_id": "vpc-02a807e6509170e64"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "sg-026552c82830cae51",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.Dashboard_Counting_App_VPC",
            "data.http.my_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet_for_Counting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:subnet/subnet-0cd1d2e750dd79d45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd1d2e750dd79d45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290094381384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Private Subnet for Counting"
            },
            "tags_all": {
              "Name": "Private Subnet for Counting"
            },
            "vpc_id": "vpc-02a807e6509170e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "subnet-0cd1d2e750dd79d45",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet_for_Dashboard",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:subnet/subnet-0de5648818b4fe2a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de5648818b4fe2a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "290094381384",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Public Subnet for Dashboard"
            },
            "tags_all": {
              "Name": "Public Subnet for Dashboard"
            },
            "vpc_id": "vpc-02a807e6509170e64"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "subnet-0de5648818b4fe2a5",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.Dashboard_Counting_App_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Dashboard_Counting_App_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:290094381384:vpc/vpc-02a807e6509170e64",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0881947a3e97a8504",
            "default_route_table_id": "rtb-0f87e3bb982ce859b",
            "default_security_group_id": "sg-04534a8a53ebc3057",
            "dhcp_options_id": "dopt-01e4078bf2b207528",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02a807e6509170e64",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f87e3bb982ce859b",
            "owner_id": "290094381384",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "Dashboard Counting App VPC"
            },
            "tags_all": {
              "Name": "Dashboard Counting App VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "290094381384",
            "id": "vpc-02a807e6509170e64",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}